<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accesorios_titulo"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/rosado_clarito"
            android:padding="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:elevation="4dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/collar_corazones"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:background="@drawable/imagen_borde_redondo"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collar_corazones_titulo"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/negro"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collar_corazones_descripcion"
                android:textColor="@color/gris_oscuro"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collar_corazones_precio"
                android:textColor="@color/negro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/rosado_clarito"
            android:padding="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:elevation="4dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/pulsera"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:background="@drawable/imagen_borde_redondo"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulsera_charms_titulo"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/negro"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulsera_charms_descripcion"
                android:textColor="@color/gris_oscuro"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulsera_charms_precio"
                android:textColor="@color/negro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/rosado_clarito"
            android:padding="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:elevation="4dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/gafasretro"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:background="@drawable/imagen_borde_redondo"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gafas_retro_titulo"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/negro"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gafas_retro_descripcion"
                android:textColor="@color/gris_oscuro"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gafas_retro_precio"
                android:textColor="@color/negro" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>