<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp"
        android:layout_gravity="center_vertical">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/imagen"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="62dp"
            android:contentDescription="@string/imagenlogo"
            android:clipToOutline="true"
            android:elevation="6dp" />

        <TextView
            android:id="@+id/tv_bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida_girly_shop"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/rosado"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="56dp" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida_info"
            android:textSize="16sp"
            android:textColor="@color/negro"
            android:textAlignment="center"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:layout_marginBottom="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" />

    </LinearLayout>
</ScrollView>